Comment out blocks for Payara Micro in order to speed up mvn.